chaining promise with .then

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Find all the Pokemon</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script type="text/javascript" src="src/pokemon.js"></script>
+    <<!-- script type="text/javascript" src="src/pokemon.js"></scri -->pt>
     <script type="text/javascript" src="src/index.js"></script>
   </head>
   <body>
@@ -12,6 +12,13 @@
       <img id="pokemon-logo" src="images/pokemon.png" alt="">
       <form id="pokemon-search-form" class="" action="" method="">
         <input id="pokemon-search-input" type="text" name="">
+      </form>
+
+      <form id="pokemon-post-form">
+        <p>create Pokemon:</p>
+        <input id="name-input" type="text" name="pokemonName" placeholder="Name"></input>
+        <input id="sprite-input" type="text" name="pokemonSprite" placeholder="Sprite URL"></input>
+        <input id="submit" type="submit" class= "pokebutton" name="submit" placeholder="submit"></input>
       </form>
       <div class='poke-container' id="pokemon-container">
 
